--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <body>
 
   <header>
-    <h1>Green Alaya Nepal</h1>
+    <h1>Greenalaya Nepal</h1>
     <p>Promoting environmental sustainability, community resilience, and a greener future for Nepal.</p>
   </header>
 
