--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <h2>About Us</h2>
     <div class="about">
       <p>
-        Green Alaya Nepal is a non-profit organization dedicated to protecting
+        Greenalaya Nepal is a non-profit organization dedicated to protecting
         nature, empowering communities, and promoting sustainable practices
         across Nepal. We work with local communities, youth, and partners to
         create long-term environmental impact.
