--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
   <section id="contact">
     <h2>Contact Us</h2>
     <div class="contact">
-      <p><strong>Email:</strong> info@greenalayanepal.org</p>
+      <p><strong>Email:</strong> info@greenalayanepal.org.np</p>
       <p><strong>Location:</strong> Nepal</p>
       <p>
         Follow us and partner with us to build a greener, healthier future.
