--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
   <!-- Font -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fontsource/montserrat@5.0.0/index.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fontsource/open-sans@5.0.0/index.css">
-  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="icon" href="logo.png" type="image/png">
 
   <style>
     :root {
